--- a/_includes/manuals/3.3/1.2_release_notes.md
+++ b/_includes/manuals/3.3/1.2_release_notes.md
@@ -39,11 +39,11 @@ We've updated our browsers compatibility to support the following:
 ### Release notes for 3.3.0
 #### Foreman
 * Support EC (and other non-RSA) keys in Foreman core ([#34843](https://projects.theforeman.org/issues/34843))
-* Remove the **Share your feedback** link from the new host details page ([#34841](https://projects.theforeman.org/issues/34841))
+* Remove the "Share your feedback"  link from the new host details page ([#34841](https://projects.theforeman.org/issues/34841))
 * Add a reports tab to the hosts details page ([#34782](https://projects.theforeman.org/issues/34782))
 * Add developer documentation for pagelets ([#34544](https://projects.theforeman.org/issues/34544))
 * Include the host comments to a host list page ([#34516](https://projects.theforeman.org/issues/34516))
-* Include the host's owner to a host list page ([#34515](https://projects.theforeman.org/issues/34515))
+* Host list page should show the owner of the host ([#34515](https://projects.theforeman.org/issues/34515))
 
 #### Foreman - API
 * Taxonomies api does not accept per_page all ([#34748](https://projects.theforeman.org/issues/34748))
@@ -93,11 +93,11 @@ We've updated our browsers compatibility to support the following:
 * Reimplement !unattended mode support as mainline feature ([#10413](https://projects.theforeman.org/issues/10413))
 
 #### Foreman - Host registration
-* Registration migration with nil template ([#34661](https://projects.theforeman.org/issues/34661))
+* The registration database migration could fail when the template is not available ([#34661](https://projects.theforeman.org/issues/34661))
 
 #### Foreman - Inventory
 * Submit button on Edit page of a host will revert back to a invalid page on Foreman ([#34830](https://projects.theforeman.org/issues/34830))
-* Submit button on host form redirects to invalid page ([#34572](https://projects.theforeman.org/issues/34572))
+* The Submit button on a host form redirects to an invalid page ([#34572](https://projects.theforeman.org/issues/34572))
 * Expose reported data in the API ([#34391](https://projects.theforeman.org/issues/34391))
 
 #### Foreman - JavaScript stack
@@ -105,7 +105,7 @@ We've updated our browsers compatibility to support the following:
 * Fix slots in system properties card ([#34815](https://projects.theforeman.org/issues/34815))
 * New host detail page - sentence case fixes ([#34798](https://projects.theforeman.org/issues/34798))
 * new host detail page - Fix host status card alignment ([#34755](https://projects.theforeman.org/issues/34755))
-* Adding host parameters clears the values of the prior line ([#34747](https://projects.theforeman.org/issues/34747))
+* Adding the host parameters clears the values of the prior line ([#34747](https://projects.theforeman.org/issues/34747))
 * Better handling when no key is passed to API middleware ([#34745](https://projects.theforeman.org/issues/34745))
 * Remove PatternFly 3 OverlayTrigger ([#34713](https://projects.theforeman.org/issues/34713))
 * Use hostFriendlyId and hostName props for host ActionBar component ([#34673](https://projects.theforeman.org/issues/34673))
@@ -144,6 +144,7 @@ We've updated our browsers compatibility to support the following:
 * Settings defined by DSL are not properly encrypted ([#34573](https://projects.theforeman.org/issues/34573))
 
 #### Foreman - Settings
+* Fix the SettingValueException error message ([#34921](https://projects.theforeman.org/issues/34921))
 * Settings - Issues with search ([#34866](https://projects.theforeman.org/issues/34866))
 * "Sync Connect Timeout" settings takes invalid value and shows update successful but doesn't reflect the change for invalid values ([#34838](https://projects.theforeman.org/issues/34838))
 * Deprecate other then DSL setting definitions ([#34603](https://projects.theforeman.org/issues/34603))
@@ -157,7 +158,7 @@ We've updated our browsers compatibility to support the following:
 #### Foreman - TFTP
 * "Kickstart default user data" Provisioning Template contains doubled description key
  ([#34776](https://projects.theforeman.org/issues/34776))
-* Make operatingsystem.bootfile useable in Jail ([#34689](https://projects.theforeman.org/issues/34689))
+* Make the operatingsystem.bootfile usable in Jail ([#34689](https://projects.theforeman.org/issues/34689))
 
 #### Foreman - Templates
 * Use foreman request address in windows iPXE  ([#34710](https://projects.theforeman.org/issues/34710))
@@ -183,7 +184,7 @@ We've updated our browsers compatibility to support the following:
 * Use systemd based Ansible callback on Ubuntu &gt;= 15 and Debian &gt;= 8 ([#34553](https://projects.theforeman.org/issues/34553))
 
 #### Foreman - Users, Roles and Permissions
-* The authorized_for doesn't work for isolated namespace engines ([#34506](https://projects.theforeman.org/issues/34506))
+* Infer of permission name for isolated namespace controllers doesnt work ([#34506](https://projects.theforeman.org/issues/34506))
 
 #### Foreman - Web Interface
 * Change host status icon to green ([#34831](https://projects.theforeman.org/issues/34831))
@@ -192,7 +193,7 @@ We've updated our browsers compatibility to support the following:
 * Cancel host form redirects to legacy host UI ([#34579](https://projects.theforeman.org/issues/34579))
 * Add pagelet mountpoints for hosts list table ([#34543](https://projects.theforeman.org/issues/34543))
 * Add breadcrumbs switcher to new host page ([#34511](https://projects.theforeman.org/issues/34511))
-* Breadcrumb switcher doesn't work with katello content ([#34495](https://projects.theforeman.org/issues/34495))
+* Breadcrumb switcher doesn't work with Katello content ([#34495](https://projects.theforeman.org/issues/34495))
 * Close bookmarks dropdown after selecting a bookmark ([#34228](https://projects.theforeman.org/issues/34228))
 * New host detail page shows IP address over multiple lines ([#33948](https://projects.theforeman.org/issues/33948))
 * Add details Tab to the host details page ([#33010](https://projects.theforeman.org/issues/33010))
@@ -247,11 +248,11 @@ We've updated our browsers compatibility to support the following:
 
 #### SELinux - Plugins
 * Drop foreman_docker compatibility ([#34730](https://projects.theforeman.org/issues/34730))
-* Templates sync with git on RHEL8 is causing SElinux error ([#34726](https://projects.theforeman.org/issues/34726))
+* Syncing the git templates on RHEL8 raise SElinux errors ([#34726](https://projects.theforeman.org/issues/34726))
 
 #### Smart Proxy
 * Support EC (and other non-RSA) keys in foreman proxy ([#34844](https://projects.theforeman.org/issues/34844))
-* Set MALLOC_ARENA_MAX to counter memory bloat in production ([#34624](https://projects.theforeman.org/issues/34624))
+* Set the MALLOC_ARENA_MAX variable to counter memory bloating in production environments ([#34624](https://projects.theforeman.org/issues/34624))
 * Rewrite validate_ip to use a case statement ([#34566](https://projects.theforeman.org/issues/34566))
 
 #### Smart Proxy - Packaging
