EL9 client repo headline feature

--- a/_includes/manuals/3.3/1.2_release_notes.md
+++ b/_includes/manuals/3.3/1.2_release_notes.md
@@ -16,6 +16,10 @@ also `Live Autocompletion` checkbox to examine the list whilst typing.
 Autocompletion is disabled by default and can be enabled in the
 editor by checking `Autocompletion` checkbox.
 
+#### EL9 Client repository
+
+This release ships with the `foreman-client` repository being available for EL9 (CentOS Stream 9, AlmaLinux 9, Rocky 9, etc).
+
 ### Upgrade warnings
 
 #### Disabling unattended mode dropped
