--- a/_includes/manuals/3.3/1.2_release_notes.md
+++ b/_includes/manuals/3.3/1.2_release_notes.md
@@ -109,6 +109,10 @@ Please switch to Ruby 2.7.
 #### Foreman - Host registration
 * The registration database migration could fail when the template is not available ([#34661](https://projects.theforeman.org/issues/34661))
 
+#### Foreman - Internationalization
+* [zh_CN] Welcome page (Login/Logout) is not localized ([#34106](https://projects.theforeman.org/issues/34106))
+* [zh_CN/ja_JP/fr_FR] 'filter' string at switcher button search box is not marked. ([#34090](https://projects.theforeman.org/issues/34090))
+
 #### Foreman - Inventory
 * Submit button on Edit page of a host will revert back to a invalid page on Foreman ([#34830](https://projects.theforeman.org/issues/34830))
 * The Submit button on a host form redirects to an invalid page ([#34572](https://projects.theforeman.org/issues/34572))
@@ -257,8 +261,10 @@ Please switch to Ruby 2.7.
 * Updates oauth Gem installed by puppet-agent-oauth under Debian to a newer version (0.5.1 produces lots of warnings about URI.escape) ([#34681](https://projects.theforeman.org/issues/34681))
 
 #### Packaging - RPMs
+* Provide modular metadata in EL8 ([#34615](https://projects.theforeman.org/issues/34615))
 * foreman.rpm pulls in nodejs ([#34507](https://projects.theforeman.org/issues/34507))
 * Installer uses hostname, but that package can be absent ([#34468](https://projects.theforeman.org/issues/34468))
+* Deliver EL8 repositories as modular repositories to fix dependency resolution, get automatic dependent module enablement and handle dependency resolution without module_hotfixes ([#34126](https://projects.theforeman.org/issues/34126))
 
 #### SELinux - Plugins
 * Drop foreman_docker compatibility ([#34730](https://projects.theforeman.org/issues/34730))
