Updated versions on install_from_source manual for Foreman 3.4

--- a/_includes/manuals/nightly/3.4_install_from_source.md
+++ b/_includes/manuals/nightly/3.4_install_from_source.md
@@ -4,9 +4,9 @@ Foreman uses Bundler to install dependencies and get up and running. This is the
 
 Foreman will run with the following requirements (aside from rubygem dependencies):
 
-* Ruby 2.5 or newer
-* NodeJS 10 or newer
-* NPM 3.0 or newer
+* Ruby 2.7.x
+* NodeJS 14
+* NPM 6.x
 
 You will want to make sure that you have *postgresql-devel* installed so the database
 gems can install properly. Also, you would also need *gcc*, *ruby-devel*,
