--- a/_includes/manuals/nightly/3.3.3_debian_packages.md
+++ b/_includes/manuals/nightly/3.3.3_debian_packages.md
@@ -3,7 +3,7 @@ The Foreman packages should work on the following Debian-based Linux distributio
 
 #### Distributions
 
-* Debian Linux 10 (Buster), amd64
+* Debian Linux 11 (Bullseye), amd64
 * Ubuntu Linux 20.04 LTS (Focal Fossa), amd64
 
 If you encounter any errors during the installation, [please file a bug report!](/contribute.html#Bugreporting)
@@ -13,8 +13,8 @@ If you encounter any errors during the installation, [please file a bug report!]
 Add one of the following lines to your */etc/apt/sources.list* (alternatively in a separate file in */etc/apt/sources.list.d/foreman.list*):
 
 ```
-# Debian Buster
-deb http://deb.theforeman.org/ buster {{page.version}}
+# Debian Bullseye
+deb http://deb.theforeman.org/ bullseye {{page.version}}
 # Ubuntu 20.04 Focal
 deb http://deb.theforeman.org/ focal {{page.version}}
 ```
