--- a/_includes/manuals/nightly/3.6_upgrade.md
+++ b/_includes/manuals/nightly/3.6_upgrade.md
@@ -37,7 +37,6 @@ To provide specific installation instructions, please select your operating syst
   <option value="none">-- select operating system --</option>
   <option value="el7">CentOS 7 / Red Hat Enterprise Linux 7</option>
   <option value="el8">CentOS 8 / CentOS 8 Stream / Red Hat Enterprise Linux 8</option>
-  <option value="debian10">Debian 10 (Buster)</option>
   <option value="debian11">Debian 11 (Bullseye)</option>
   <option value="ubuntu2004">Ubuntu 20.04 (Focal)</option>
 </select>
@@ -63,7 +62,7 @@ Before proceeding, it is necessary to shutdown the Foreman instance.
 systemctl stop httpd foreman.service foreman.socket dynflow\*
 {% endhighlight %}
 </div>
-<div class="upgrade_os upgrade_os_debian10 upgrade_os_debian11 upgrade_os_ubuntu2004">
+<div class="upgrade_os upgrade_os_debian11 upgrade_os_ubuntu2004">
 {% highlight bash %}
 systemctl stop apache foreman.service foreman.socket dynflow\*
 {% endhighlight %}
@@ -141,7 +140,7 @@ dnf upgrade ruby\* foreman\*
 {% endhighlight %}
 </div>
 
-<div class="upgrade_os upgrade_os_debian10 upgrade_os_debian11 upgrade_os_ubuntu2004">
+<div class="upgrade_os upgrade_os_debian11 upgrade_os_ubuntu2004">
 Upgrading from the last release to {{page.version}} has been tested. Updating
 the packages will upgrade the application and automatically migrate the
 database.
@@ -149,12 +148,6 @@ database.
 First edit `/etc/apt/sources.list.d/foreman.list` and change the release
 number from the previous release to `{{ page.version }}`:
 
-<div class="upgrade_os upgrade_os_debian10">
-{% highlight bash %}
-deb http://deb.theforeman.org/ buster {{ page.version }}
-deb http://deb.theforeman.org/ plugins {{ page.version }}
-{% endhighlight %}
-</div>
 <div class="upgrade_os upgrade_os_debian11">
 {% highlight bash %}
 deb http://deb.theforeman.org/ bullseye {{ page.version }}
@@ -226,7 +219,7 @@ rpmconf from the EPEL repository along with vim-enhanced (for vimdiff).
 rpmconf -a --frontend=vimdiff
 {% endhighlight %}
 </div>
-<div class="upgrade_os upgrade_os_el8 upgrade_os_debian10 upgrade_os_debian11 upgrade_os_ubuntu2004">
+<div class="upgrade_os upgrade_os_el8 upgrade_os_debian11 upgrade_os_ubuntu2004">
 This step is irrelevant for the chosen operating system.
 </div>
 
@@ -242,7 +235,7 @@ Start the application server. This is redundant if you previously ran `foreman-i
 systemctl start httpd foreman.service foreman.socket
 {% endhighlight %}
 </div>
-<div class="upgrade_os upgrade_os_debian10 upgrade_os_debian11 upgrade_os_ubuntu2004">
+<div class="upgrade_os upgrade_os_debian11 upgrade_os_ubuntu2004">
 {% highlight bash %}
 systemctl start apache foreman.service foreman.socket
 {% endhighlight %}
