Drop EL7 from nightly

--- a/_includes/manuals/nightly/2.1_quickstart_installation.md
+++ b/_includes/manuals/nightly/2.1_quickstart_installation.md
@@ -24,12 +24,9 @@ function update_quickstart_os(select) {
 To provide specific installation instructions, please select your operating system:
 <select onChange="update_quickstart_os(this);">
   <option value="none">-- select operating system --</option>
-  <option value="centos7">CentOS 7</option>
   <option value="el8">CentOS 8</option>
   <option value="el8">CentOS 8 Stream</option>
-  <option value="other_el7">Scientific Linux or Oracle Linux 7</option>
   <option value="debian11">Debian 11 (Bullseye)</option>
-  <option value="rhel7">Red Hat Enterprise Linux 7</option>
   <option value="rhel8">Red Hat Enterprise Linux 8</option>
   <option value="ubuntu2004">Ubuntu 20.04 (Focal)</option>
 </select>
@@ -40,32 +37,6 @@ To provide specific installation instructions, please select your operating syst
   <i>No operating system selected.</i>
 </div>
 
-<div class="quickstart_os quickstart_os_rhel7">
-  <p>First, enable the RHEL Optional and SCL repositories:</p>
-
-{% highlight bash %}
-sudo yum-config-manager --enable rhel-7-server-optional-rpms rhel-server-rhscl-7-rpms
-{% endhighlight %}
-
-  <p>
-    Check the repositories are enabled with <code>yum repolist</code> after running the above command, as it can silently fail when subscription does not provide those.
-  </p>
-</div>
-
-<div class="quickstart_os quickstart_os_rhel7 quickstart_os_other_el7 quickstart_os_centos7">
-  <p>
-    <b>Note:</b> The RPM packages are not tested on Scientific Linux or Oracle Linux. The Foreman installation on Scientific Linux or Oracle Linux may or may not work.
-  </p>
-
-  <p>
-    Enable Puppet's 7.x repository:
-  </p>
-
-{% highlight bash %}
-sudo yum -y install https://yum.puppet.com/puppet7-release-el-7.noarch.rpm
-{% endhighlight %}
-</div>
-
 <div class="quickstart_os quickstart_os_rhel8 quickstart_os_el8">
   <p>
     Enable Puppet's 7.x repository:
@@ -74,37 +45,6 @@ sudo yum -y install https://yum.puppet.com/puppet7-release-el-7.noarch.rpm
 {% highlight bash %}
 sudo dnf -y install https://yum.puppet.com/puppet7-release-el-8.noarch.rpm
 {% endhighlight %}
-</div>
-
-<div class="quickstart_os quickstart_os_rhel7">
-  <p>Enable the EPEL (Extra Packages for Enterprise Linux) and the Foreman repositories:</p>
-
-{% highlight bash %}
-sudo yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-sudo yum -y install https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
-{% endhighlight %}
-</div>
-
-<div class="quickstart_os quickstart_os_centos7">
-  <p>Enable the EPEL (Extra Packages for Enterprise Linux), Foreman and SCL (Software Collections) repositories:</p>
-
-{% highlight bash %}
-sudo yum-config-manager --enable extras
-sudo yum -y install epel-release centos-release-scl-rh
-sudo yum -y install https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
-{% endhighlight %}
-
-</div>
-
-<div class="quickstart_os quickstart_os_other_el7">
-  <p>Enable the EPEL (Extra Packages for Enterprise Linux), Foreman and SCL (Software Collections) repositories:</p>
-
-{% highlight bash %}
-sudo yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-sudo yum -y install https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
-sudo yum -y install https://mirror.centos.org/centos/7/extras/x86_64/Packages/centos-release-scl-rh-2-3.el7.centos.noarch.rpm
-{% endhighlight %}
-
 </div>
 
 <div class="quickstart_os quickstart_os_rhel8 quickstart_os_el8">
@@ -169,9 +109,9 @@ echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /et
   <i>No operating system selected.</i>
 </div>
 
-<div class="quickstart_os quickstart_os_rhel7 quickstart_os_el7 quickstart_os_centos7 other_el7 quickstart_os_rhel8 quickstart_os_el8">
+<div class="quickstart_os quickstart_os_rhel8 quickstart_os_el8">
 {% highlight bash %}
-sudo yum -y install foreman-installer
+sudo dnf -y install foreman-installer
 {% endhighlight %}
 </div>
 
@@ -189,7 +129,7 @@ sudo apt-get update && sudo apt-get -y install foreman-installer
 
 The installation run is non-interactive, but the configuration can be customized by supplying any of the options listed in `foreman-installer --help`, or by running `foreman-installer -i` for interactive mode.  More examples are given in the [Installation Options](/manuals/{{page.version}}/index.html#3.2.2InstallerOptions) section.  Adding `-v` will disable the progress bar and display all changes.  To run the installer, execute:
 
-<div class="quickstart_os quickstart_os_none quickstart_os_el7 quickstart_os_rhel7 quickstart_os_debian11 quickstart_os_ubuntu2004 quickstart_os_el8 quickstart_os_rhel8">
+<div class="quickstart_os quickstart_os_none quickstart_os_debian11 quickstart_os_ubuntu2004 quickstart_os_el8 quickstart_os_rhel8">
 {% highlight bash %}
 sudo foreman-installer
 {% endhighlight %}
