--- a/_includes/manuals/nightly/3.1.1_supported_platforms.md
+++ b/_includes/manuals/nightly/3.1.1_supported_platforms.md
@@ -1,19 +1,8 @@
 The following operating systems are supported by the installer, have packages and are tested for deploying Foreman:
 
-* Red Hat Enterprise Linux 7
-  * Architectures: x86_64 only
-  * [EPEL](https://fedoraproject.org/wiki/EPEL/FAQ#How_can_I_install_the_packages_from_the_EPEL_software_repository.3F) is required
-  * Enable the Optional and RHSCL repositories/channels:
-    * `yum-config-manager --enable rhel-7-server-optional-rpms rhel-server-rhscl-7-rpms`
-    * check the above repositories because the command can silently fail when subscription does not provide it: `yum repolist`
-  * Apply all SELinux-related errata.
 * Red Hat Enterprise Linux 8
   * Architectures: x86_64 only
   * Apply all SELinux-related errata.
-* CentOS, Scientific Linux or Oracle Linux 7
-  * **Note:** The RPM packages are not tested on Scientific Linux or Oracle Linux. The Foreman installation on Scientific Linux or Oracle Linux may or may not work.
-  * Architectures: x86_64 only
-  * [EPEL](https://fedoraproject.org/wiki/EPEL/FAQ#How_can_I_install_the_packages_from_the_EPEL_software_repository.3F) is required
 * CentOS 8
   * Architectures: x86_64 only
 * CentOS 8 Stream
@@ -26,7 +15,7 @@ The following operating systems are supported by the installer, have packages an
 * Debian 11 (Bullseye)
   * Architectures: amd64
 
-PostgreSQL version 10 or newer. For EL 7 this is available from Software Collections.
+PostgreSQL version 10 or newer.
 
 It is recommended to apply all OS updates if possible.
 
