--- a/_includes/manuals/nightly/3.6_upgrade.md
+++ b/_includes/manuals/nightly/3.6_upgrade.md
@@ -35,8 +35,7 @@ $(document).ready(function() {
 To provide specific installation instructions, please select your operating system:
 <select id="upgrade_os" onChange="update_upgrade_os(this);">
   <option value="none">-- select operating system --</option>
-  <option value="el7">CentOS 7 / Red Hat Enterprise Linux 7</option>
-  <option value="el8">CentOS 8 / CentOS 8 Stream / Red Hat Enterprise Linux 8</option>
+  <option value="el8">CentOS 8 Stream / Red Hat Enterprise Linux 8</option>
   <option value="debian11">Debian 11 (Bullseye)</option>
   <option value="ubuntu2004">Ubuntu 20.04 (Focal)</option>
 </select>
@@ -57,7 +56,7 @@ Before proceeding, it is necessary to shutdown the Foreman instance.
 <div class="upgrade_os upgrade_os_none">
   <i>No operating system selected.</i>
 </div>
-<div class="upgrade_os upgrade_os_el7 upgrade_os_el8">
+<div class="upgrade_os upgrade_os_el8">
 {% highlight bash %}
 systemctl stop httpd foreman.service foreman.socket dynflow\*
 {% endhighlight %}
@@ -72,39 +71,6 @@ Now it's time to perform the actual upgrade.
 
 <div class="upgrade_os upgrade_os_none">
   <i>No operating system selected.</i>
-</div>
-
-<div class="upgrade_os upgrade_os_el7">
-To upgrade an existing Foreman installation, first update with the
-appropriate foreman-release package:
-
-{% highlight bash %}
-yum upgrade https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
-{% endhighlight %}
-
-Also make sure centos-release-scl-rh is up to date:
-
-{% highlight bash %}
-yum upgrade centos-release-scl-rh
-{% endhighlight %}
-
-Clean up the yum metadata cache:
-
-{% highlight bash %}
-yum clean metadata
-{% endhighlight %}
-
-Next upgrade all Foreman packages:
-
-{% highlight bash %}
-yum upgrade tfm\* ruby\* foreman\*
-{% endhighlight %}
-
-Optionally, consider removing unused SCL packages:
-
-{% highlight bash %}
-yum erase rh-ruby22\* rh-ruby24\* rh-ror42\* tfm-ror52\* rh-ruby25\*
-{% endhighlight %}
 </div>
 
 <div class="upgrade_os upgrade_os_el8">
@@ -207,22 +173,6 @@ To apply these changes, run the installer again without options
 
     foreman-installer
 
-##### Optional Step 3 (D) - Update config files
-<div class="upgrade_os upgrade_os_none">
-  <i>*No operating system selected.*</i>
-</div>
-<div class="upgrade_os upgrade_os_el7">
-In order to catch all configuration changes and manage them properly you should install and run
-rpmconf from the EPEL repository along with vim-enhanced (for vimdiff).
-
-{% highlight bash %}
-rpmconf -a --frontend=vimdiff
-{% endhighlight %}
-</div>
-<div class="upgrade_os upgrade_os_el8 upgrade_os_debian11 upgrade_os_ubuntu2004">
-This step is irrelevant for the chosen operating system.
-</div>
-
 ##### Step 4 - Restart
 
 Start the application server. This is redundant if you previously ran `foreman-installer` in step 3B.
@@ -230,7 +180,7 @@ Start the application server. This is redundant if you previously ran `foreman-i
 <div class="upgrade_os upgrade_os_none">
   <i>*No operating system selected.*</i>
 </div>
-<div class="upgrade_os upgrade_os_el7 upgrade_os_el8">
+<div class="upgrade_os upgrade_os_el8">
 {% highlight bash %}
 systemctl start httpd foreman.service foreman.socket
 {% endhighlight %}
