--- a/_includes/manuals/nightly/3.2.2_installer_options.md
+++ b/_includes/manuals/nightly/3.2.2_installer_options.md
@@ -130,8 +130,16 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_plugin_discovery' puppet module (<a href="/plugins/foreman_discovery">foreman_discovery</a>)</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-dlm</td>
+        <td>Enable 'foreman_plugin_dlm' puppet module (<a href="https://github.com/theforeman/foreman_dlm">foreman_dlm</a>)</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-expire-hosts</td>
         <td>Enable 'foreman_plugin_expire_hosts' puppet module (<a href="https://github.com/theforeman/foreman_expire_hosts">foreman_expire_hosts</a>)</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-git-templates</td>
+        <td>Enable 'foreman_plugin_git_templates' puppet module (<a href="https://github.com/theforeman/foreman_git_templates">foreman_git_templates</a>)</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-hooks</td>
@@ -162,6 +170,10 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_plugin_monitoring' puppet module (<a href="https://github.com/theforeman/foreman_monitoring">foreman_monitoring</a>)</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-netbox</td>
+        <td>Enable 'foreman_plugin_netbox' puppet module (<a href="https://github.com/theforeman/foreman_netbox">foreman_netbox</a>)</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-omaha</td>
         <td>Enable 'foreman_plugin_omaha' puppet module (<a href="https://github.com/theforeman/foreman_omaha">foreman_omaha</a>)</td>
       </tr>
@@ -190,6 +202,10 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_plugin_remote_execution_cockpit' puppet module (<a href="https://github.com/theforeman/foreman_remote_execution_cockpit">foreman_remote_execution_cockpit</a>)</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-rescue</td>
+        <td>Enable 'foreman_plugin_rescue' puppet module (<a href="https://github.com/theforeman/foreman_rescue">foreman_rescue</a>)</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-salt</td>
         <td>Enable 'foreman_plugin_salt' puppet module (<a href="/plugins/foreman_salt">foreman_salt</a>)</td>
       </tr>
@@ -214,8 +230,16 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_plugin_templates' puppet module (<a href="/plugins/foreman_templates">foreman_templates</a>)</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-vault</td>
+        <td>Enable 'foreman_plugin_vault' puppet module (<a href="https://github.com/theforeman/foreman_vault">foreman_vault</a>)</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-webhooks</td>
         <td>Enable 'foreman_plugin_webhooks' puppet module (<a href="https://github.com/theforeman/foreman_webhooks">foreman_webhooks</a>)</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-wreckingball</td>
+        <td>Enable 'foreman_plugin_wreckingball' puppet module (<a href="https://github.com/theforeman/foreman_wreckingball">foreman_wreckingball</a>)</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-compute-ec2</td>
@@ -1804,6 +1828,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>The path of the puppetserver run dir</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--puppet-server-puppetserver-telemetry</td>
+        <td>Enable Dropsonde telemetry. Defaults to true, matching defaults in Puppetserver 7. If set to false, will disable module metrics submission via Dropsonde. Note that is only valid since Puppetserver 7.</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--puppet-server-puppetserver-trusted-agents</td>
         <td>Certificate names of puppet agents that are allowed to fetch *all* catalogs Defaults to [] and all agents are only allowed to fetch their own catalogs.</td>
       </tr>
@@ -2010,6 +2038,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-plugin-puppetdb-ssl-private-key</td>
         <td>Private key file which will be used to connect to the PuppetDB API.</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-plugin-remote-execution-cockpit-origins</td>
+        <td>Specify additional Cockpit Origins to configure cockpit.conf. The $foreman_url is included by default.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-plugin-tasks-automatic-cleanup</td>
